addl relative directory cleanup

--- a/ancestors-know/artists/paige-pettibon/index.html
+++ b/ancestors-know/artists/paige-pettibon/index.html
@@ -1033,7 +1033,7 @@ starts running -->
 </noscript> -->
   <!--FANCYAPPS-->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script type="module" src="_app/i/pages/index.js"></script>
+  <script type="module" src="../../_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="single-1"]', {
       compact: false,
