--- a/ancestors-know/artists/storme-webber/index.html
+++ b/ancestors-know/artists/storme-webber/index.html
@@ -13,7 +13,7 @@
       name="description"
       content="Through artistic expression and reflection, the online exhibition Ancestors Know Who We Are explores contemporary realities in the interwoven histories of Black and Indigenous peoples."
     />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="../../favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -197,7 +197,7 @@
             <div class="level svelte-1xximcf">
               <div class="logo svelte-1xximcf">
                 <a
-                  href="/"
+                  href="../../"
                   aria-label="Ancestors Know Who We Are"
                   class="svelte-1xximcf"
                   >Ancestors <span class="svelte-1xximcf">Know</span> Who We
@@ -219,7 +219,7 @@
               <summary class="level svelte-gu3tcc" tabindex="-1">
                 <div class="logo svelte-gu3tcc">
                   <a
-                    href="/"
+                    href="../../"
                     class="svelte-gu3tcc"
                     aria-label="Ancestors Know Who We Are"
                     >Ancestors <span class="svelte-gu3tcc">Know</span> Who We
@@ -253,51 +253,51 @@
                 <nav aria-label="Main" class="svelte-gu3tcc">
                   <ul class="svelte-gu3tcc">
                     <li class="svelte-gu3tcc">
-                      <a href="/from-the-curator#top" class="svelte-gu3tcc"
+                      <a href="../../from-the-curator#top" class="svelte-gu3tcc"
                         >From the Curator</a
                       >
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#artists" class="svelte-gu3tcc">Artists</a>
+                      <a href="../../#artists" class="svelte-gu3tcc">Artists</a>
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/rodslen-brown#top"
+                            href="../rodslen-brown#top"
                             class="svelte-gu3tcc"
                             >Rodslen Brown</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/joelle-joyner#top"
+                            href="../joelle-joyner#top"
                             class="svelte-gu3tcc"
                             >Joelle Joyner</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/moira-pernambuco#top"
+                            href="../moira-pernambuco#top"
                             class="svelte-gu3tcc"
                             >Moira Pernambuco</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/paige-pettibon#top"
+                            href="../paige-pettibon#top"
                             class="svelte-gu3tcc"
                             >Paige Pettibon</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/monica-rickert-bolter#top"
+                            href="../monica-rickert-bolter#top"
                             class="svelte-gu3tcc"
                             >Monica Rickert-Bolter</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/storme-webber#top"
+                            href="../storme-webber#top"
                             class="svelte-gu3tcc"
                             >Storme Webber</a
                           >
@@ -305,37 +305,37 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#gallery" class="svelte-gu3tcc">Gallery</a>
+                      <a href="../../#gallery" class="svelte-gu3tcc">Gallery</a>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#reflections" class="svelte-gu3tcc"
+                      <a href="../../#reflections" class="svelte-gu3tcc"
                         >Reflections</a
                       >
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top"
+                            href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top"
                             class="svelte-gu3tcc"
                             >Afro-Indigenous Relations in a Reimagined Future</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/art-gender-and-identity#top"
+                            href="../../reflections/art-gender-and-identity#top"
                             class="svelte-gu3tcc"
                             >Art, Gender, and Identity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/black-native-identity-and-futurity#top"
+                            href="../../reflections/black-native-identity-and-futurity#top"
                             class="svelte-gu3tcc"
                             >Black-Native Identity and Futurity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/motherhood#top"
+                            href="../../reflections/motherhood#top"
                             class="svelte-gu3tcc"
                             >Motherhood</a
                           >
@@ -343,7 +343,7 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#resources" class="svelte-gu3tcc">Resources</a>
+                      <a href="../../#resources" class="svelte-gu3tcc">Resources</a>
                     </li>
                   </ul>
                 </nav>
@@ -476,7 +476,7 @@
                         </p>
                         <strong class="svelte-tuhwmi">—ANYA MONTIEL </strong>
                         <div class="essay-link svelte-tuhwmi">
-                          <a href="/from-the-curator#top" class="svelte-tuhwmi"
+                          <a href="../../from-the-curator#top" class="svelte-tuhwmi"
                             >From the Curator</a
                           >
                         </div>
@@ -614,52 +614,12 @@
                         class="audio-icon svelte-tuhwmi"
                         aria-label="play-audio"
                       >
-                        <!-- <svg
-                          version="1.1"
-                          id="Layer_1"
-                          xmlns="http://www.w3.org/2000/svg"
-                          xmlns:xlink="http://www.w3.org/1999/xlink"
-                          x="0px"
-                          y="0px"
-                          viewBox="0 0 120 120"
-                          style="enable-background: new 0 0 120 120"
-                          xml:space="preserve"
-                          class="svelte-tuhwmi"
-                        >
-                          <style type="text/css">
-                            .st0 {
-                              fill: none;
-                            }
-                          </style>
-                          <polygon
-                            class="st0 svelte-tuhwmi"
-                            points="81.3,60 52.3,43.3 52.3,76.7 "
-                          ></polygon>
-                          <path
-                            class="st0 svelte-tuhwmi"
-                            d="M9,78.3c-2.2,0-4-1.8-4-4V45.8c0-2.2,1.8-4,4-4s4,1.8,4,4v28.5C13.1,76.5,11.3,78.3,9,78.3z M25.8,85.4V34.6
-							c0-2.2-1.8-4-4-4s-4,1.8-4,4v50.9c0,2.2,1.8,4,4,4S25.8,87.7,25.8,85.4z M38.6,111.4V8.6c0-2.2-1.8-4-4-4s-4,1.8-4,4v102.8
-							c0,2.2,1.8,4,4,4S38.6,113.7,38.6,111.4z M102.3,105.1V14.9c0-2.2-1.8-4-4-4s-4,1.8-4,4v90.3c0,2.2,1.8,4,4,4
-							S102.3,107.4,102.3,105.1z M115,82.6V37.4c0-2.2-1.8-4-4-4s-4,1.8-4,4v45.3c0,2.2,1.8,4,4,4S115,84.9,115,82.6z M49.6,81.4
-							c-1.7-1-2.7-2.7-2.7-4.6V43.3c0-1.9,1-3.7,2.7-4.6c0.5-0.3,1.1-0.5,1.7-0.6v-8.7c0-2.2-1.8-4-4-4s-4,1.8-4,4v61.3c0,2.2,1.8,4,4,4
-							s4-1.8,4-4V82C50.7,81.9,50.2,81.7,49.6,81.4z M56,80.8v24.4c0,2.2,1.8,4,4,4s4-1.8,4-4v-29L56,80.8z M64,43.8v-29c0-2.2-1.8-4-4-4
-							s-4,1.8-4,4v24.4L64,43.8z M76.8,51.2V33.7c0-2.2-1.8-4-4-4s-4,1.8-4,4v12.8L76.8,51.2z M68.7,73.5v12.8c0,2.2,1.8,4,4,4s4-1.8,4-4
-							V68.8L68.7,73.5z M85.5,41.7c-2.2,0-4,1.8-4,4v8.1l2.5,1.5c1.7,1,2.7,2.7,2.7,4.6s-1,3.7-2.7,4.6l-2.5,1.5v8.1c0,2.2,1.8,4,4,4
-							s4-1.8,4-4V45.8C89.5,43.5,87.7,41.7,85.5,41.7z"
-                          ></path>
-                        </svg> -->
-                      </div>
 
-                      <!-- <audio id="audio-clip" controls class="svelte-tuhwmi">
-                        <source
-                          src="/audio/Storme_Webber_I_Cover_the_Waterfront_June_22.mp3"
-                          type="audio/mpeg"
-                        />
-                      </audio> -->
+                      </div>
 
                       <audio controls class="svelte-tuhwmi">
                         <source
-                          src="/audio/Storme_Webber_I_Cover_the_Waterfront_June_22.mp3"
+                          src="../../audio/Storme_Webber_I_Cover_the_Waterfront_June_22.mp3"
                           type="audio/mpeg"
                         />
                       </audio>
@@ -671,7 +631,7 @@
                     <a
                       sveltekit:reload
                       target="_blank"
-                      href="/transcripts/Ancestors-Know-Who-We-Are-Storme-Webber-poem-r-.pdf"
+                      href="../../transcripts/Ancestors-Know-Who-We-Are-Storme-Webber-poem-r-.pdf"
                       id="audio-transcript"
                       class="svelte-tuhwmi"
                       >Transcript</a
@@ -725,7 +685,7 @@
                           >More from this author: </span
                         >
                         <a
-                          href="/reflections/art-gender-and-identity#top"
+                          href="../../reflections/art-gender-and-identity#top"
                           class="svelte-tuhwmi"
                           >Art, Gender, and Identity</a
                         >
@@ -770,7 +730,7 @@
                 <a
                   target="_blank"
                   sveltekit:reload
-                  href="/transcripts/Ancestors-Know-Who-We-Are-Storme-Webber-interview.pdf"
+                  href="../../transcripts/Ancestors-Know-Who-We-Are-Storme-Webber-interview.pdf"
                   class="transcript svelte-tuhwmi"
                   >Transcript</a
                 >
@@ -789,7 +749,7 @@
             <div id="artists-menu-2" class="svelte-kvuzze">
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/rodslen-brown#top"
+                  href="../rodslen-brown#top"
                   aria-label="Rodslen Brown artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
@@ -801,7 +761,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/joelle-joyner#top"
+                  href="../joelle-joyner#top"
                   aria-label="Joelle Joyner artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Joelle Joyner</div>
@@ -813,7 +773,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/moira-pernambuco#top"
+                  href="../moira-pernambuco#top"
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
@@ -826,7 +786,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/paige-pettibon#top"
+                  href="../paige-pettibon#top"
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
@@ -839,7 +799,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/monica-rickert-bolter#top"
+                  href="../monica-rickert-bolter#top"
                   aria-label="Monica Rickert-Bolter artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Monica Rickert-Bolter</div>
@@ -851,7 +811,7 @@
               </div>
               <div class="is-active--duotone svelte-kvuzze">
                 <a
-                  href="/artists/storme-webber#top"
+                  href="../storme-webber#top"
                   aria-label="Storme Webber artist page link"
                   class="svelte-kvuzze"
                 >
@@ -1122,24 +1082,6 @@
         </div>
       </div>
 
-      <!-- <script type="module" data-sveltekit-hydrate="1fgu9pl">
-		import { start } from "/_app/i/start.js";
-		start({
-			target: document.querySelector('[data-sveltekit-hydrate="1fgu9pl"]').parentNode,
-			paths: {"base":"","assets":""},
-			session: {},
-			route: true,
-			spa: false,
-			trailing_slash: "always",
-			hydrate: {
-				status: 200,
-				error: null,
-				nodes: [0, 7],
-				params: {},
-				routeId: "artists/storme-webber"
-			}
-		});
-	</script> -->
     </div>
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
