--- a/ancestors-know/index.html
+++ b/ancestors-know/index.html
@@ -130,15 +130,6 @@
     <link rel="stylesheet" href="./_app/i/assets/pages/index.css" />
     <link rel="stylesheet" href="./_app/i/assets/SlideIn.css" />
     <link rel="stylesheet" href="./_app/i/assets/Reflections.css" />
-    <!-- <link rel="modulepreload" href="/_app/i/start.js">
-	<link rel="modulepreload" href="/_app/i/chunks/index.js">
-	<link rel="modulepreload" href="/_app/i/chunks/paths.js">
-	<link rel="modulepreload" href="/_app/i/pages/__layout.js">
-	<link rel="modulepreload" href="/_app/i/pages/index.js">
-	<link rel="modulepreload" href="/_app/i/chunks/SlideIn.js">
-	<link rel="modulepreload" href="/_app/i/chunks/Reflections.js">
-	<link rel="modulepreload" href="/_app/i/chunks/lg-share.js">
-	<link rel="modulepreload" href="/_app/i/chunks/lg-thumbnail.js"> -->
 
     <!--FANCY IMAGES META-->
     <meta name="viewport" content="width=device-width" />
@@ -191,7 +182,7 @@
             <div class="level svelte-1xximcf">
               <div class="logo svelte-1xximcf">
                 <a
-                  href="/"
+                  href="./"
                   aria-label="Ancestors Know Who We Are"
                   class="svelte-1xximcf"
                   >Ancestors <span class="svelte-1xximcf">Know</span> Who We
@@ -213,7 +204,7 @@
               <summary class="level svelte-gu3tcc" tabindex="-1">
                 <div class="logo svelte-gu3tcc">
                   <a
-                    href="/"
+                    href="./"
                     class="svelte-gu3tcc"
                     aria-label="Ancestors Know Who We Are"
                     >Ancestors <span class="svelte-gu3tcc">Know</span> Who We
