--- a/ancestors-know/artists/joelle-joyner/index.html
+++ b/ancestors-know/artists/joelle-joyner/index.html
@@ -13,7 +13,7 @@
       name="description"
       content="Through artistic expression and reflection, the online exhibition Ancestors Know Who We Are explores contemporary realities in the interwoven histories of Black and Indigenous peoples."
     />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="../../favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -198,7 +198,7 @@
             <div class="level svelte-1xximcf">
               <div class="logo svelte-1xximcf">
                 <a
-                  href="/"
+                  href="../../"
                   aria-label="Ancestors Know Who We Are"
                   class="svelte-1xximcf"
                   >Ancestors <span class="svelte-1xximcf">Know</span> Who We
@@ -220,7 +220,7 @@
               <summary class="level svelte-gu3tcc" tabindex="-1">
                 <div class="logo svelte-gu3tcc">
                   <a
-                    href="/"
+                    href="../../"
                     class="svelte-gu3tcc"
                     aria-label="Ancestors Know Who We Are"
                     >Ancestors <span class="svelte-gu3tcc">Know</span> Who We
@@ -254,51 +254,51 @@
                 <nav aria-label="Main" class="svelte-gu3tcc">
                   <ul class="svelte-gu3tcc">
                     <li class="svelte-gu3tcc">
-                      <a href="/from-the-curator#top" class="svelte-gu3tcc"
+                      <a href="../../from-the-curator#top" class="svelte-gu3tcc"
                         >From the Curator</a
                       >
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#artists" class="svelte-gu3tcc">Artists</a>
+                      <a href="../../#artists" class="svelte-gu3tcc">Artists</a>
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/rodslen-brown#top"
+                            href="../rodslen-brown#top"
                             class="svelte-gu3tcc"
                             >Rodslen Brown</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/joelle-joyner#top"
+                            href="../joelle-joyner#top"
                             class="svelte-gu3tcc"
                             >Joelle Joyner</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/moira-pernambuco#top"
+                            href="../moira-pernambuco#top"
                             class="svelte-gu3tcc"
                             >Moira Pernambuco</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/paige-pettibon#top"
+                            href="../paige-pettibon#top"
                             class="svelte-gu3tcc"
                             >Paige Pettibon</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/monica-rickert-bolter#top"
+                            href="../monica-rickert-bolter#top"
                             class="svelte-gu3tcc"
                             >Monica Rickert-Bolter</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/storme-webber#top"
+                            href="../storme-webber#top"
                             class="svelte-gu3tcc"
                             >Storme Webber</a
                           >
@@ -306,37 +306,37 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#gallery" class="svelte-gu3tcc">Gallery</a>
+                      <a href="../../#gallery" class="svelte-gu3tcc">Gallery</a>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#reflections" class="svelte-gu3tcc"
+                      <a href="../../#reflections" class="svelte-gu3tcc"
                         >Reflections</a
                       >
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top"
+                            href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top"
                             class="svelte-gu3tcc"
                             >Afro-Indigenous Relations in a Reimagined Future</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/art-gender-and-identity#top"
+                            href="../../reflections/art-gender-and-identity#top"
                             class="svelte-gu3tcc"
                             >Art, Gender, and Identity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/black-native-identity-and-futurity#top"
+                            href="../../reflections/black-native-identity-and-futurity#top"
                             class="svelte-gu3tcc"
                             >Black-Native Identity and Futurity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/motherhood#top"
+                            href="../../reflections/motherhood#top"
                             class="svelte-gu3tcc"
                             >Motherhood</a
                           >
@@ -344,7 +344,7 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#resources" class="svelte-gu3tcc">Resources</a>
+                      <a href="../../#resources" class="svelte-gu3tcc">Resources</a>
                     </li>
                   </ul>
                 </nav>
@@ -494,7 +494,7 @@
                             >More from this author: 
                           </span>
                           <a
-                            href="/reflections/art-gender-and-identity#top"
+                            href="../../reflections/art-gender-and-identity#top"
                             class="svelte-tuhwmi"
                             >Art, Gender, and Identity</a
                           >
@@ -597,7 +597,7 @@
                 <a
                   target="_blank"
                   sveltekit:reload
-                  href="/transcripts/Ancestors-Know-Who-We-Are-Joelle-Joyner-interview.pdf"
+                  href="../../transcripts/Ancestors-Know-Who-We-Are-Joelle-Joyner-interview.pdf"
                   class="transcript svelte-tuhwmi"
                   >Transcript</a
                 >
@@ -616,7 +616,7 @@
             <div id="artists-menu-2" class="svelte-kvuzze">
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/rodslen-brown#top"
+                  href="../rodslen-brown#top"
                   aria-label="Rodslen Brown artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
@@ -628,7 +628,7 @@
               </div>
               <div class="is-active--duotone svelte-kvuzze">
                 <a
-                  href="/artists/joelle-joyner#top"
+                  href="../joelle-joyner#top"
                   aria-label="Joelle Joyner artist page link"
                   class="svelte-kvuzze"
                 >
@@ -640,7 +640,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/moira-pernambuco#top"
+                  href="../moira-pernambuco#top"
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
@@ -653,7 +653,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/paige-pettibon#top"
+                  href="../paige-pettibon#top"
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
@@ -666,7 +666,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/monica-rickert-bolter#top"
+                  href="../monica-rickert-bolter#top"
                   aria-label="Monica Rickert-Bolter artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Monica Rickert-Bolter</div>
@@ -678,7 +678,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/storme-webber#top"
+                  href="../storme-webber#top"
                   aria-label="Storme Webber artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Storme Webber</div>
@@ -1012,7 +1012,7 @@ starts running -->
 
   <!--FANCYAPPS-->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script type="module" src="/_app/i/pages/index.js"></script>
+  <script type="module" src="../_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="single-1"]', {
       compact: false,
