--- a/ancestors-know/artists/monica-rickert-bolter/index.html
+++ b/ancestors-know/artists/monica-rickert-bolter/index.html
@@ -13,7 +13,7 @@
       name="description"
       content="Through artistic expression and reflection, the online exhibition Ancestors Know Who We Are explores contemporary realities in the interwoven histories of Black and Indigenous peoples."
     />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="../../favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -197,7 +197,7 @@
             <div class="level svelte-1xximcf">
               <div class="logo svelte-1xximcf">
                 <a
-                  href="/"
+                  href="../../"
                   aria-label="Ancestors Know Who We Are"
                   class="svelte-1xximcf"
                   >Ancestors <span class="svelte-1xximcf">Know</span> Who We
@@ -219,7 +219,7 @@
               <summary class="level svelte-gu3tcc" tabindex="-1">
                 <div class="logo svelte-gu3tcc">
                   <a
-                    href="/"
+                    href="../../"
                     class="svelte-gu3tcc"
                     aria-label="Ancestors Know Who We Are"
                     >Ancestors <span class="svelte-gu3tcc">Know</span> Who We
@@ -253,51 +253,51 @@
                 <nav aria-label="Main" class="svelte-gu3tcc">
                   <ul class="svelte-gu3tcc">
                     <li class="svelte-gu3tcc">
-                      <a href="/from-the-curator#top" class="svelte-gu3tcc"
+                      <a href="../../from-the-curator#top" class="svelte-gu3tcc"
                         >From the Curator</a
                       >
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#artists" class="svelte-gu3tcc">Artists</a>
+                      <a href="../../#artists" class="svelte-gu3tcc">Artists</a>
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/rodslen-brown#top"
+                            href="../rodslen-brown#top"
                             class="svelte-gu3tcc"
                             >Rodslen Brown</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/joelle-joyner#top"
+                            href="../joelle-joyner#top"
                             class="svelte-gu3tcc"
                             >Joelle Joyner</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/moira-pernambuco#top"
+                            href="../moira-pernambuco#top"
                             class="svelte-gu3tcc"
                             >Moira Pernambuco</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/paige-pettibon#top"
+                            href="../paige-pettibon#top"
                             class="svelte-gu3tcc"
                             >Paige Pettibon</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/monica-rickert-bolter#top"
+                            href="../monica-rickert-bolter#top"
                             class="svelte-gu3tcc"
                             >Monica Rickert-Bolter</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/storme-webber#top"
+                            href="../storme-webber#top"
                             class="svelte-gu3tcc"
                             >Storme Webber</a
                           >
@@ -305,37 +305,37 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#gallery" class="svelte-gu3tcc">Gallery</a>
+                      <a href="../../#gallery" class="svelte-gu3tcc">Gallery</a>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#reflections" class="svelte-gu3tcc"
+                      <a href="../../#reflections" class="svelte-gu3tcc"
                         >Reflections</a
                       >
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top"
+                            href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top"
                             class="svelte-gu3tcc"
                             >Afro-Indigenous Relations in a Reimagined Future</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/art-gender-and-identity#top"
+                            href="../../reflections/art-gender-and-identity#top"
                             class="svelte-gu3tcc"
                             >Art, Gender, and Identity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/black-native-identity-and-futurity#top"
+                            href="../../reflections/black-native-identity-and-futurity#top"
                             class="svelte-gu3tcc"
                             >Black-Native Identity and Futurity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/motherhood#top"
+                            href="../../reflections/motherhood#top"
                             class="svelte-gu3tcc"
                             >Motherhood</a
                           >
@@ -343,7 +343,7 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#resources" class="svelte-gu3tcc">Resources</a>
+                      <a href="../../#resources" class="svelte-gu3tcc">Resources</a>
                     </li>
                   </ul>
                 </nav>
@@ -513,7 +513,7 @@
                             >More from this author: </span
                           >
                           <a
-                            href="/reflections/motherhood#top"
+                            href="../../reflections/motherhood#top"
                             class="svelte-tuhwmi"
                             >Motherhood</a
                           >
@@ -698,7 +698,7 @@
                 <a
                   target="_blank"
                   sveltekit:reload
-                  href="/transcripts/Ancestors-Know-Who-We-Are-Monica-Rickert-Bolter-interview.pdf"
+                  href="../../transcripts/Ancestors-Know-Who-We-Are-Monica-Rickert-Bolter-interview.pdf"
                   class="transcript svelte-tuhwmi"
                   >Transcript</a
                 >
@@ -717,7 +717,7 @@
             <div id="artists-menu-2" class="svelte-kvuzze">
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/rodslen-brown#top"
+                  href="../rodslen-brown#top"
                   aria-label="Rodslen Brown artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Rodslen Brown</div>
@@ -729,7 +729,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/joelle-joyner#top"
+                  href="../joelle-joyner#top"
                   aria-label="Joelle Joyner artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Joelle Joyner</div>
@@ -741,7 +741,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/moira-pernambuco#top"
+                  href="../moira-pernambuco#top"
                   aria-label="Moira Pernambuco artist page link"
                   class="svelte-kvuzze"
                   ><img
@@ -754,7 +754,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/paige-pettibon#top"
+                  href="../paige-pettibon#top"
                   aria-label="Paige Pettibon artist page link"
                   class="svelte-kvuzze"
                   ><img
@@ -767,7 +767,7 @@
               </div>
               <div class="is-active--duotone svelte-kvuzze">
                 <a
-                  href="/artists/monica-rickert-bolter#top"
+                  href="../monica-rickert-bolter#top"
                   aria-label="Monica Rickert-Bolter artist page link"
                   class="svelte-kvuzze"
                 >
@@ -779,7 +779,7 @@
               </div>
               <div class="svelte-kvuzze">
                 <a
-                  href="/artists/storme-webber#top"
+                  href="../storme-webber#top"
                   aria-label="Storme Webber artist page link"
                   class="svelte-kvuzze"
                   ><div class="even svelte-kvuzze">Storme Webber</div>
