--- a/ancestors-know/from-the-curator/index.html
+++ b/ancestors-know/from-the-curator/index.html
@@ -6,7 +6,7 @@
       name="description"
       content="Through artistic expression and reflection, the online exhibition Ancestors Know Who We Are explores contemporary realities in the interwoven histories of Black and Indigenous peoples."
     />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="../favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -127,23 +127,23 @@
       content="Ancestors Know Who We Are | Smithsonian National Museum of the American Indian"
       data-svelte="svelte-1v2a5gq"
     />
-    <link rel="stylesheet" href="/../_app/i/assets/pages/__layout.css" />
+    <link rel="stylesheet" href="../_app/i/assets/pages/__layout.css" />
     <link
       rel="stylesheet"
-      href="../../_app/i/assets/pages/from-the-curator/index.css"
+      href="../_app/i/assets/pages/from-the-curator/index.css"
     />
-    <link rel="stylesheet" href="../../_app/i/assets/SlideIn.css" />
-    <link rel="stylesheet" href="../../_app/i/assets/SurveyBanner.css" />
-    <link rel="modulepreload" href="../../_app/i/start.js" />
-    <link rel="modulepreload" href="../../_app/i/chunks/index.js" />
-    <link rel="modulepreload" href="../../_app/i/chunks/paths.js" />
-    <link rel="modulepreload" href="../../_app/i/pages/__layout.js" />
+    <link rel="stylesheet" href="../_app/i/assets/SlideIn.css" />
+    <link rel="stylesheet" href="../_app/i/assets/SurveyBanner.css" />
+    <link rel="modulepreload" href="../_app/i/start.js" />
+    <link rel="modulepreload" href="../_app/i/chunks/index.js" />
+    <link rel="modulepreload" href="../_app/i/chunks/paths.js" />
+    <link rel="modulepreload" href="../_app/i/pages/__layout.js" />
     <link
       rel="modulepreload"
-      href="../../_app/i/pages/from-the-curator/index.js"
+      href="../_app/i/pages/from-the-curator/index.js"
     />
-    <link rel="modulepreload" href="../../_app/i/chunks/SlideIn.js" />
-    <link rel="modulepreload" href="../../_app/i/chunks/SurveyBanner.js" />
+    <link rel="modulepreload" href="../_app/i/chunks/SlideIn.js" />
+    <link rel="modulepreload" href="../_app/i/chunks/SurveyBanner.js" />
   </head>
 
   <body style="margin: 0">
@@ -175,7 +175,7 @@
         <div class="wrap--inner svelte-62rfki">
           <div class="default-header svelte-1xximcf">
             <img
-              src="../../images/logo-nmai-si-lockup.svg"
+              src="../images/logo-nmai-si-lockup.svg"
               alt="National Museum of the American Indian"
               class="svelte-1xximcf"
             />
@@ -189,7 +189,7 @@
             <div class="level svelte-1xximcf">
               <div class="logo svelte-1xximcf">
                 <a
-                  href="/"
+                  href="../"
                   aria-label="Ancestors Know Who We Are"
                   class="svelte-1xximcf"
                   >Ancestors <span class="svelte-1xximcf">Know</span> Who We
@@ -211,7 +211,7 @@
               <summary class="level svelte-gu3tcc" tabindex="-1">
                 <div class="logo svelte-gu3tcc">
                   <a
-                    href="/"
+                    href="../"
                     class="svelte-gu3tcc"
                     aria-label="Ancestors Know Who We Are"
                     >Ancestors <span class="svelte-gu3tcc">Know</span> Who We
@@ -220,7 +220,7 @@
                 </div>
                 <div class="default-header--2 svelte-gu3tcc">
                   <img
-                    src="../../images/logo-nmai-si-lockup.svg"
+                    src="../images/logo-nmai-si-lockup.svg"
                     alt="National Museum of the American Indian"
                     class="svelte-gu3tcc"
                   />
@@ -245,51 +245,51 @@
                 <nav aria-label="Main" class="svelte-gu3tcc">
                   <ul class="svelte-gu3tcc">
                     <li class="svelte-gu3tcc">
-                      <a href="/from-the-curator#top" class="svelte-gu3tcc"
+                      <a href="../from-the-curator#top" class="svelte-gu3tcc"
                         >From the Curator</a
                       >
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#artists" class="svelte-gu3tcc">Artists</a>
+                      <a href="../#artists" class="svelte-gu3tcc">Artists</a>
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/rodslen-brown#top"
+                            href="../artists/rodslen-brown#top"
                             class="svelte-gu3tcc"
                             >Rodslen Brown</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/joelle-joyner#top"
+                            href="../artists/joelle-joyner#top"
                             class="svelte-gu3tcc"
                             >Joelle Joyner</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/moira-pernambuco#top"
+                            href="../artists/moira-pernambuco#top"
                             class="svelte-gu3tcc"
                             >Moira Pernambuco</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/paige-pettibon#top"
+                            href="../artists/paige-pettibon#top"
                             class="svelte-gu3tcc"
                             >Paige Pettibon</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/monica-rickert-bolter#top"
+                            href="../artists/monica-rickert-bolter#top"
                             class="svelte-gu3tcc"
                             >Monica Rickert-Bolter</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/artists/storme-webber#top"
+                            href="../artists/storme-webber#top"
                             class="svelte-gu3tcc"
                             >Storme Webber</a
                           >
@@ -297,37 +297,37 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#gallery" class="svelte-gu3tcc">Gallery</a>
+                      <a href="../#gallery" class="svelte-gu3tcc">Gallery</a>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#reflections" class="svelte-gu3tcc"
+                      <a href="../#reflections" class="svelte-gu3tcc"
                         >Reflections</a
                       >
                       <ul class="svelte-gu3tcc">
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/afro-indigenous-relations-in-a-reimagined-future#top"
+                            href="..//reflections/afro-indigenous-relations-in-a-reimagined-future#top"
                             class="svelte-gu3tcc"
                             >Afro-Indigenous Relations in a Reimagined Future</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/art-gender-and-identity#top"
+                            href="../reflections/art-gender-and-identity#top"
                             class="svelte-gu3tcc"
                             >Art, Gender, and Identity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/black-native-identity-and-futurity#top"
+                            href="../reflections/black-native-identity-and-futurity#top"
                             class="svelte-gu3tcc"
                             >Black-Native Identity and Futurity</a
                           >
                         </li>
                         <li class="svelte-gu3tcc">
                           <a
-                            href="/reflections/motherhood#top"
+                            href="../reflections/motherhood#top"
                             class="svelte-gu3tcc"
                             >Motherhood</a
                           >
@@ -335,7 +335,7 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="/#resources" class="svelte-gu3tcc">Resources</a>
+                      <a href="../#resources" class="svelte-gu3tcc">Resources</a>
                     </li>
                   </ul>
                 </nav>
@@ -390,7 +390,7 @@
             <div class="reflect-img svelte-tuhwmi">
               <div class="svelte-tuhwmi">
                 <img
-                  src="../../images/AKWWA_14.webp"
+                  src="../images/AKWWA_14.webp"
                   alt="Color illustration of an Indigenous woman and a Black woman  standing with arms linked and the words “We Stand Together”"
                   class="svelte-tuhwmi"
                 />
@@ -455,7 +455,7 @@
             <div class="reflect-img-no-grid svelte-tuhwmi">
               <div class="svelte-tuhwmi">
                 <img
-                  src="../../images/AKWWA_46.webp"
+                  src="../images/AKWWA_46.webp"
                   alt="A crowd and dancers gather on  an open street covered with drawings, words, and flowers."
                   class="svelte-tuhwmi"
                 />
@@ -531,7 +531,7 @@
                 </p>
                 <div class="svelte-1u4zws">
                   <img
-                    src="../../images/logo-because-of-her-story.svg"
+                    src="../images/logo-because-of-her-story.svg"
                     alt="Logo Because of her story"
                     class="svelte-1u4zws"
                   />
@@ -547,13 +547,13 @@
                   aria-label="National Museum of the American Indian"
                   class="svelte-1u4zws"
                   ><img
-                    src="../../images/logo-nmai-stacked-horiz-white.svg"
+                    src="../images/logo-nmai-stacked-horiz-white.svg"
                     alt="Logo National Museum of the American Indian"
                     class="svelte-1u4zws"
                 /></a>
                 <span class="svelte-1u4zws"
                   ><img
-                    src="../../images/logo-si-horiz-white.svg"
+                    src="../images/logo-si-horiz-white.svg"
                     alt="Logo Smithsonian"
                     class="svelte-1u4zws"
                 /></span>
@@ -564,7 +564,7 @@
                   aria-label="Twitter"
                   class="svelte-1u4zws"
                   ><img
-                    src="../../images/icons-twitter.svg"
+                    src="../images/icons-twitter.svg"
                     alt="Twitter"
                     class="svelte-1u4zws"
                 /></a>
@@ -573,7 +573,7 @@
                   aria-label="Instagram"
                   class="svelte-1u4zws"
                   ><img
-                    src="../../images/icons-instagram.svg"
+                    src="../images/icons-instagram.svg"
                     alt="Instagram"
                     class="svelte-1u4zws"
                 /></a>
@@ -582,7 +582,7 @@
                   aria-label="Facebook"
                   class="svelte-1u4zws"
                   ><img
-                    src="../../images/icons-facebook.svg"
+                    src="../images/icons-facebook.svg"
                     alt="Facebook"
                     class="svelte-1u4zws"
                 /></a>
@@ -591,7 +591,7 @@
                   aria-label="Youtube"
                   class="svelte-1u4zws"
                   ><img
-                    src="../../images/icons-youtube.svg"
+                    src="../images/icons-youtube.svg"
                     alt="Youtube"
                     class="svelte-1u4zws"
                 /></a>
@@ -780,8 +780,8 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <script src="../../_app/i/assets/check-visible.js"></script>
-    <script src="../../_app/i/assets/check-visible.js"></script>
+    <script src="../_app/i/assets/check-visible.js"></script>
+    <script src="../_app/i/assets/check-visible.js"></script>
 
     <script>
       $(document).ready(function () {
