--- a/ancestors-know/reflections/art-gender-and-identity/index.html
+++ b/ancestors-know/reflections/art-gender-and-identity/index.html
@@ -11,7 +11,7 @@
 	<!-- End Google Tag Manager -->
 	<meta charset="utf-8" />
 	<meta name="description" content="Through artistic expression and reflection, the online exhibition Ancestors Know Who We Are explores contemporary realities in the interwoven histories of Black and Indigenous peoples." />
-	<link rel="icon" href="/favicon.png" />
+	<link rel="icon" href="../../favicon.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -82,32 +82,32 @@
 <a href="#title" class="sr-only svelte-1xximcf">Skip to main content</a>
 
 
-<div class="decoy-sticky-off svelte-1xximcf"><div class="level svelte-1xximcf"><div class="logo svelte-1xximcf"><a href="/" aria-label="Ancestors Know Who We Are" class="svelte-1xximcf">Ancestors
+<div class="decoy-sticky-off svelte-1xximcf"><div class="level svelte-1xximcf"><div class="logo svelte-1xximcf"><a href="../../" aria-label="Ancestors Know Who We Are" class="svelte-1xximcf">Ancestors
         <span class="svelte-1xximcf">Know</span> Who We Are</a></div>
     <div class="toggle svelte-1xximcf" tabindex="0"><svg id="hamburger2" aria-hidden="true" class="svelte-1xximcf"><use href="#symbol-menu" xlink="http://www.w3.org/1999/xlink"></use></svg>
       </div></div></div>
 <div class="header svelte-1xximcf">
 
-<details id="nav" class="svelte-gu3tcc"><summary class="level svelte-gu3tcc" tabindex="-1"><div class="logo svelte-gu3tcc"><a href="/" class=" svelte-gu3tcc" aria-label="Ancestors Know Who We Are">Ancestors <span class="svelte-gu3tcc">Know</span> Who We Are</a></div>
+<details id="nav" class="svelte-gu3tcc"><summary class="level svelte-gu3tcc" tabindex="-1"><div class="logo svelte-gu3tcc"><a href="../../" class=" svelte-gu3tcc" aria-label="Ancestors Know Who We Are">Ancestors <span class="svelte-gu3tcc">Know</span> Who We Are</a></div>
     <div class="default-header--2 svelte-gu3tcc"><img src="../../images/logo-nmai-si-lockup.svg" alt="National Museum of the American Indian" class="svelte-gu3tcc"></div>
     <div class="toggle svelte-gu3tcc" tabindex="0"><svg id="hamburger" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-menu" xlink="http://www.w3.org/1999/xlink"></use></svg>
       <svg id="close" aria-hidden="true" class="svelte-gu3tcc"><use href="#symbol-close" xlink="http://www.w3.org/1999/xlink"></use></svg></div></summary>
 
-  <div id="nav-wrapper" class="svelte-gu3tcc"><nav aria-label="Main" class="svelte-gu3tcc"><ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="/from-the-curator#top" class="svelte-gu3tcc">From the Curator</a></li>
-        <li class="svelte-gu3tcc"><a href="/#artists" class="svelte-gu3tcc">Artists</a>
+  <div id="nav-wrapper" class="svelte-gu3tcc"><nav aria-label="Main" class="svelte-gu3tcc"><ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../from-the-curator#top" class="svelte-gu3tcc">From the Curator</a></li>
+        <li class="svelte-gu3tcc"><a href="../../#artists" class="svelte-gu3tcc">Artists</a>
           <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../artists/rodslen-brown#top" class="svelte-gu3tcc">Rodslen Brown</a></li>
             <li class="svelte-gu3tcc"><a href="../../artists/joelle-joyner#top" class="svelte-gu3tcc">Joelle Joyner</a></li>
             <li class="svelte-gu3tcc"><a href="../../artists/moira-pernambuco#top" class="svelte-gu3tcc">Moira Pernambuco</a></li>
             <li class="svelte-gu3tcc"><a href="../../artists/paige-pettibon#top" class="svelte-gu3tcc">Paige Pettibon</a></li>
             <li class="svelte-gu3tcc"><a href="../../artists/monica-rickert-bolter#top" class="svelte-gu3tcc">Monica Rickert-Bolter</a></li>
             <li class="svelte-gu3tcc"><a href="../../artists/storme-webber#top" class="svelte-gu3tcc">Storme Webber</a></li></ul></li>
-        <li class="svelte-gu3tcc"><a href="/#gallery" class="svelte-gu3tcc">Gallery</a></li>
-        <li class="svelte-gu3tcc"><a href="/#reflections" class="svelte-gu3tcc">Reflections</a>
+        <li class="svelte-gu3tcc"><a href="../../#gallery" class="svelte-gu3tcc">Gallery</a></li>
+        <li class="svelte-gu3tcc"><a href="../../#reflections" class="svelte-gu3tcc">Reflections</a>
           <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top" class="svelte-gu3tcc">Afro-Indigenous Relations in a Reimagined Future</a></li>
             <li class="svelte-gu3tcc"><a href="../../reflections/art-gender-and-identity#top" class="svelte-gu3tcc">Art, Gender, and Identity</a></li>
             <li class="svelte-gu3tcc"><a href="../../reflections/black-native-identity-and-futurity#top" class="svelte-gu3tcc">Black-Native Identity and Futurity</a></li>
             <li class="svelte-gu3tcc"><a href="../../reflections/motherhood#top" class="svelte-gu3tcc">Motherhood</a></li></ul></li>
-        <li class="svelte-gu3tcc"><a href="/#resources" class="svelte-gu3tcc">Resources</a></li></ul></nav></div>
+        <li class="svelte-gu3tcc"><a href="../../#resources" class="svelte-gu3tcc">Resources</a></li></ul></nav></div>
 </details>
 </div>
 
@@ -326,11 +326,11 @@
 
 <div id="reflections-nav" class="svelte-11tnqbu"><div class="tiles svelte-51v5yi"><div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top"><span class="svelte-51v5yi">Afro-Indigenous Relations in a Reimagined Future</span>
       <img id="essay1" src="../../images/reflections-001-crop.webp" alt="Afro-Indigenous Relations in a Reimagined Future" class="svelte-51v5yi"></a></div>
-  <div class="svelte-51v5yi"><a class="active svelte-51v5yi" href="/reflections/art-gender-and-identity#top"><span class="svelte-51v5yi">Art, Gender, and Identity</span>
+  <div class="svelte-51v5yi"><a class="active svelte-51v5yi" href="../art-gender-and-identity#top"><span class="svelte-51v5yi">Art, Gender, and Identity</span>
       <img id="essay2" src="../../images/reflections-003-crop.webp" alt="Art Gender and Identity" class="svelte-51v5yi"></a></div>
-  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/black-native-identity-and-futurity#top"><span class="svelte-51v5yi">Black-Native Identity and Futurity</span>
+  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../black-native-identity-and-futurity#top"><span class="svelte-51v5yi">Black-Native Identity and Futurity</span>
       <img id="essay3" src="../../images/reflections-002-crop.webp" alt="Black Native Identity and Futurity" class="svelte-51v5yi"></a></div>
-  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="/reflections/motherhood#top"><span class="svelte-51v5yi">Motherhood</span>
+  <div class="svelte-51v5yi"><a class=" svelte-51v5yi" href="../motherhood#top"><span class="svelte-51v5yi">Motherhood</span>
       <img id="essay4" src="../../images/reflections-004-crop.webp" alt="Motherhood" class="svelte-51v5yi"></a></div>
 </div></div>
 
