--- a/reflections/afro-indigenous-relations-in-a-reimagined-future/index.html
+++ b/reflections/afro-indigenous-relations-in-a-reimagined-future/index.html
@@ -101,7 +101,7 @@
             <li class="svelte-gu3tcc"><a href="../../artists/paige-pettibon#top" class="svelte-gu3tcc">Paige Pettibon</a></li>
             <li class="svelte-gu3tcc"><a href="../../artists/monica-rickert-bolter#top" class="svelte-gu3tcc">Monica Rickert-Bolter</a></li>
             <li class="svelte-gu3tcc"><a href="../../artists/storme-webber#top" class="svelte-gu3tcc">Storme Webber</a></li></ul></li>
-        <li class="svelte-gu3tcc"><a href="../../#gallery" class="svelte-gu3tcc">Gallery</a></li>
+        <li class="svelte-gu3tcc"><a href="../../#gallery-room" class="svelte-gu3tcc">Gallery</a></li>
         <li class="svelte-gu3tcc"><a href="../../#reflections" class="svelte-gu3tcc">Reflections</a>
           <ul class="svelte-gu3tcc"><li class="svelte-gu3tcc"><a href="../../reflections/afro-indigenous-relations-in-a-reimagined-future#top" class="svelte-gu3tcc">Afro-Indigenous Relations in a Reimagined Future</a></li>
             <li class="svelte-gu3tcc"><a href="../../reflections/art-gender-and-identity#top" class="svelte-gu3tcc">Art, Gender, and Identity</a></li>
