--- a/artists/monica-rickert-bolter/index.html
+++ b/artists/monica-rickert-bolter/index.html
@@ -305,7 +305,7 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="../../#gallery" class="svelte-gu3tcc">Gallery</a>
+                      <a href="../../#gallery-room" class="svelte-gu3tcc">Gallery</a>
                     </li>
                     <li class="svelte-gu3tcc">
                       <a href="../../#reflections" class="svelte-gu3tcc"
