--- a/resources/index.html
+++ b/resources/index.html
@@ -286,7 +286,7 @@
                       </ul>
                     </li>
                     <li class="svelte-gu3tcc">
-                      <a href="../#gallery" class="svelte-gu3tcc">Gallery</a>
+                      <a href="../#gallery-room" class="svelte-gu3tcc">Gallery</a>
                     </li>
                     <li class="svelte-gu3tcc">
                       <a href="../#reflections" class="svelte-gu3tcc"
