fix gallery image links

--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
                       data-caption="Storme Webber, <em>My Beloveds</em>"
                       class="lgallery svelte-9jebsy"
                       href="./images/webber-my-beloveds-2x.webp"
-                      data-src="v/images/webber-my-beloveds-2x.webp"
+                      data-src="./images/webber-my-beloveds-2x.webp"
                       data-sub-html="<p>Storme Webber, <em>My Beloveds</em></p>"
                       ><img
                         src="./images/webber-my-beloveds-crop.webp"
@@ -1033,7 +1033,7 @@
                     >
                     <img
                       id="essay3"
-                      src="../images/reflections-002-crop.webp"
+                      src="./images/reflections-002-crop.webp"
                       alt="Black Native Identity and Futurity"
                       class="svelte-51v5yi"
                   /></a>
