Moved cdn assets to internal
*Made internal files for jquery.js, fancybox.js/.css, and addtoany.js
* Replaced cdn links in each html file with internal link following same relative file format

--- a/artists/moira-pernambuco/index.html
+++ b/artists/moira-pernambuco/index.html
@@ -157,7 +157,7 @@
     <meta name="viewport" content="width=device-width" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+      href="../../_app/i/chunks/fancybox.css"
     />
   </head>
 
@@ -841,7 +841,7 @@
             </div>
             <script
               async
-              src="https://static.addtoany.com/menu/page.js"
+              src="../../_app/i/chunks/addtoany.js"
             ></script>
             <div
               class="a2a_kit a2a_kit_size_32 a2a_default_style footer--sharing-icons s-CGbQ-BIh5e2Q svelte-1u4zws"
@@ -1009,9 +1009,7 @@
 	</script> -->
     </div>
     <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
+      src="../../_app/i/chunks/jquery-3.7.1.js"
     ></script>
     <script src="../../_app/i/assets/check-visible.js"></script>
 
@@ -1050,7 +1048,7 @@ starts running -->
 	</style>
 </noscript> -->
   <!--FANCYAPPS-->
-  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="../../_app/i/chunks/fancybox.js"></script>
   <script type="module" src="../../_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="single-1"]', {
