--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <meta name="viewport" content="width=device-width" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+      href="./_app/i/chunks/fancybox.css"
     />
   </head>
 
@@ -1225,7 +1225,7 @@
             </div>
             <script
               async
-              src="https://static.addtoany.com/menu/page.js"
+              src="./_app/i/chunks/addtoany.js"
             ></script>
             <div
               class="a2a_kit a2a_kit_size_32 a2a_default_style footer--sharing-icons s-CGbQ-BIh5e2Q svelte-1u4zws"
@@ -1375,9 +1375,8 @@
 
     </div>
     <script
-  src="https://code.jquery.com/jquery-3.7.1.js"
-  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-  crossorigin="anonymous"></script>
+  src="./_app/i/chunks/jquery-3.7.1.js"
+></script>
   <script src="./_app/i/assets/check-visible.js"></script>
 
     <script>
@@ -1401,7 +1400,7 @@
   </body>
 
   <!-- FANCY LAYOUT-->
-  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="./_app/i/chunks/fancybox.js"></script>
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   <script type="module" src="./_app/i/pages/index.js"></script>
   <script>
