--- a/reflections/motherhood/index.html
+++ b/reflections/motherhood/index.html
@@ -319,7 +319,7 @@
       <a href="https://www.youtube.com/user/SmithsonianNMAI" aria-label="Youtube" class="svelte-1u4zws"><img src="../../images/icons-youtube.svg" alt="Youtube" class="svelte-1u4zws"></a></div>
     <div class="menu svelte-1u4zws"><a href="https://www.si.edu/privacy/" class="svelte-1u4zws">Privacy</a><span class="svelte-1u4zws">|</span><a href="https://www.si.edu/termsofuse/" class="svelte-1u4zws">Terms of Use</a><span class="svelte-1u4zws">|</span>© 2022 Smithsonian Institution
     </div></div>
-  <script async src="https://static.addtoany.com/menu/page.js"></script>
+  <script async src="../../_app/i/chunks/addtoany.js"></script>
   <div class="a2a_kit a2a_kit_size_32 a2a_default_style footer--sharing-icons s-CGbQ-BIh5e2Q svelte-1u4zws" style="line-height: 32px;"><p class="footer--sharing-label s-CGbQ-BIh5e2Q svelte-1u4zws">Share:</p>
     <a class="a2a_button_twitter s-CGbQ-BIh5e2Q svelte-1u4zws" target="_blank" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Famericanindian.si.edu%2F&linkname=Ancestors%20Know%20Who%20We%20Are&linknote=The%20National%20Museum%20of%20the%20American%20Indian%E2%80%99s%20online%20exhibition%20ignites%20a%20conversation%20on%20the%20experiences%20of%20Black-Indigenous%20women%20through%20art.%20%40SmithsonianNMAI%20%23AncestorsKnow%20%23NDNsEverywhere" rel="nofollow noopener"><span class="a2a_svg a2a_s__default a2a_s_twitter svelte-1u4zws" style="background-color: #ffffff;"><svg focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="svelte-1u4zws"><path fill="#FFF" d="M28 8.557a9.913 9.913 0 01-2.828.775 4.93 4.93 0 002.166-2.725 9.738 9.738 0 01-3.13 1.194 4.92 4.92 0 00-3.593-1.55 4.924 4.924 0 00-4.794 6.049c-4.09-.21-7.72-2.17-10.15-5.15a4.942 4.942 0 00-.665 2.477c0 1.71.87 3.214 2.19 4.1a4.968 4.968 0 01-2.23-.616v.06c0 2.39 1.7 4.38 3.952 4.83-.414.115-.85.174-1.297.174-.318 0-.626-.03-.928-.086a4.935 4.935 0 004.6 3.42 9.893 9.893 0 01-6.114 2.107c-.398 0-.79-.023-1.175-.068a13.953 13.953 0 007.55 2.213c9.056 0 14.01-7.507 14.01-14.013 0-.213-.005-.426-.015-.637.96-.695 1.795-1.56 2.455-2.55z" class="svelte-1u4zws"></path></svg></span><span class="a2a_label svelte-1u4zws">Twitter</span></a>
 
@@ -357,7 +357,7 @@
 	 -->
 </div>
 <script
-src="https://code.jquery.com/jquery-3.7.1.js"
+src="../../_app/i/chunks/jquery-3.7.1.js"
 integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 crossorigin="anonymous"
 ></script>
