--- a/artists/storme-webber/index.html
+++ b/artists/storme-webber/index.html
@@ -157,7 +157,7 @@
     <meta name="viewport" content="width=device-width" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+      href="../../_app/i/chunks/fancybox.css"
     />
   </head>
 
@@ -947,7 +947,7 @@
             </div>
             <script
               async
-              src="https://static.addtoany.com/menu/page.js"
+              src="../../_app/i/chunks/addtoany.js"
             ></script>
             <div
               class="a2a_kit a2a_kit_size_32 a2a_default_style footer--sharing-icons s-CGbQ-BIh5e2Q svelte-1u4zws"
@@ -1097,7 +1097,7 @@
 
     </div>
     <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
+      src="../../_app/i/chunks/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
@@ -1139,7 +1139,7 @@ starts running -->
 </noscript> -->
 
   <!--FANCYAPPS-->
-  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="../../_app/i/chunks/fancybox.js"></script>
   <script type="module" src="../../_app/i/pages/index.js"></script>
   <script>
     Fancybox.bind('[data-fancybox="single-1"]', {
