--- a/from-the-curator/index.html
+++ b/from-the-curator/index.html
@@ -621,7 +621,7 @@
             </div>
             <script
               async
-              src="https://static.addtoany.com/menu/page.js"
+              src="../_app/i/chunks/addtoany.js"
             ></script>
             <div
               class="a2a_kit a2a_kit_size_32 a2a_default_style footer--sharing-icons s-CGbQ-BIh5e2Q svelte-1u4zws"
@@ -789,9 +789,7 @@
 	</script> -->
     </div>
     <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
+      src="../_app/i/chunks/jquery-3.7.1.js"
     ></script>
     <script src="../_app/i/assets/check-visible.js"></script>
     <script src="../_app/i/assets/check-visible.js"></script>
