--- a/resources/index.html
+++ b/resources/index.html
@@ -445,7 +445,7 @@
             </div>
             <script
               async
-              src="https://static.addtoany.com/menu/page.js"
+              src="../_app/i/chunks/index.js"
             ></script>
             <div
               class="a2a_kit a2a_kit_size_32 a2a_default_style footer--sharing-icons s-CGbQ-BIh5e2Q svelte-1u4zws"
