remove checksums from jquery script tags

--- a/artists/storme-webber/index.html
+++ b/artists/storme-webber/index.html
@@ -1096,11 +1096,7 @@
       </div>
 
     </div>
-    <script
-      src="../../_app/i/chunks/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
-    ></script>
+    <script src="../../_app/i/chunks/jquery-3.7.1.js"></script>
     <script src="../../_app/i/assets/check-visible.js"></script>
 
     <script>
